fixed overlapping button class css error

--- a/utkarsh_frontend/src/Design/HomePage.css
+++ b/utkarsh_frontend/src/Design/HomePage.css
@@ -49,18 +49,21 @@
     font-family: cursive;
     display: inline;
 }
-.button {
+#homepagebutton {
     color:#e7e5e4;
         min-width: fit-content;
         width:9vmax;
         height:9vmax;
          border-radius: 50vw;
+          border: 0.1vw solid #4b1564;
         font-size: 1.2vmax;
         font-weight: 400;
      background-image: linear-gradient(to right, #a330b8, #158897); 
-align-items: center;
-        align-self: center;
-        align-content: center;}
+      box-shadow: 0 1rem 1.25rem 0 rgba(22, 75, 195, 0.5),
+    0 -0.25rem 1.5rem rgb(99, 21, 136) inset,
+    0 0.75rem 0.5rem rgba(255, 255, 255, 0.4) inset,
+    0 0.25rem 0.5rem 0 rgba(180, 70, 207, 1) inset;
+}
 
 .arrow{
     border: solid black; 
